Updates to theme to fix text wrap.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,3 +240,10 @@
         }
     }
 }*/
+
+.image-credit {
+  position: absolute;
+  font-size: 0.75em;
+  right: 1%;
+  bottom: 39%;
+}
